<resources>
    <string name="app_name">EventHub</string>
    <string name="hint_email">Type your Email</string>
    <string name="hint_pass">Type Your Password</string>
    <string name="hint_confpass">Retype Your Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="Already_reg">Already Registered , Sign In!</string>
    <string name="Not_reg">Not Registered Yet , Sign Up!</string>
    <string name="back_button">back button</string>
    <string name="events_list">Events List:-</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="userid">Userid</string>
    <string name="location">Location</string>
    <string name="add_profile_pic">Add Profile Pic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invite">Invite</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="name_of_the_event">Name Of The Event</string>
    <string name="date_of_the_event">Date Of The Event</string>
    <string name="event_by">Event By</string>
    <string name="chats">Chats</string>
    <string name="register">Register</string>
    <string name="eventbyuser">EventbyUser</string>
    <string name="comments">Comments</string>
    <string name="eventdate">EventDate</string>
    <string name="bg">bg</string>
    <string name="double_click_for_date_dialog_box">Double click for date dialog box</string>

    <!-- Other resources -->
    <string name="likes_template">%d likes</string>
</resources>