<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#FCF9F9"
    android:layout_margin="2dp"
    app:contentPadding="2dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/post_profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:elevation="2dp"
            android:layout_margin="2dp"
            style="ProfileLayout"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_userPicture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_adddp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_color="@color/lavendar"
                app:civ_border_width="2dp"
                android:layout_margin="2dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/post_event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NameOfEvent"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />



                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="2dp"
                        android:background="@drawable/rounded_button_bgg">



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:id="@+id/post_event_venue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="EventVenue"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </FrameLayout>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:background="@drawable/rounded_button_bgg">



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:id="@+id/post_event_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="EventDate"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </FrameLayout>
                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:id="@+id/post_event_time"
                    android:text="33min "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:id="@+id/post_event_byuser"
                    android:text="@string/eventbyuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>





        <ImageView
            android:id="@+id/post_Image"
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FFF"
            android:elevation="4dp"
            android:scaleType="centerCrop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/ProfileLayout"
            >
            <TextView
                android:id="@+id/post_LikesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14 like"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="3dp"
                />
            <TextView
                android:id="@+id/post_CommentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 1.2k Comments"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="end"
                android:layout_margin="3dp"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            style="@style/ProfileLayout"
            >

            <Button
                android:id="@+id/event_like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/like"
                android:textAllCaps="false"
                app:icon="@drawable/ic_like_not"/>


            <Button
                android:id="@+id/event_comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/comment"
                android:textAllCaps="false"
                app:icon="@drawable/baseline_comment_24"

                />


            <Button
                android:id="@+id/event_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textAllCaps="false"
                app:icon="@drawable/baseline_share_24"/>

            />


        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="@style/ProfileLayout">

        <Button
            android:id="@+id/event_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textAllCaps="false"
            app:icon="@drawable/baseline_add"/>
    </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>